cluster/apps/media-management/qbittorrent/deployment.yaml
---
# yamllint disable
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: jovalle/qbittorrent-openvpn:v0.3.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 8999
        - containerPort: 8999
          protocol: UDP
        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
        - name: tunnel
          mountPath: /dev/net/tun
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          tcpSocket:
            port: 8080
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
          tcpSocket:
            port: 8080
        resources:
          request:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
      restartPolicy: Always
      volumes:
      - name: config
        hostPath:
          path: /home/mellow/k8s/qbittorrent
      - name: downloads
        nfs:
          path: /srv/nfs4/k3s/default-kube-plex-kube-plex-data-pvc-1ad88c90-4fbd-42c2-bf3b-ab6603c3b8b9/downloads/
          server: 95.217.203.235
      - hostPath:
          path: /dev/net/tun
          type: ""
        name: tunnel
      - hostPath:
          path: /etc/localtime
          type: ""
        name: localtime
