cluster/apps/media-management/qbittorrent/ingress.yaml
---
# yamllint disable
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "qbittorrent"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cloud-download-outline"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "qbittorrent.${SECRET_DOMAIN}"
      secretName: "qbittorrent-tls"
  rules:
  - host: "qbittorrent.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 8080
